# sgd-rest

./: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
sgd/: __init__.py  api.py  constants.py  exceptions.py
sgd/data/: genes_to_loci.json
src/sgd/: __init__.py  constants.py
tests/: test_api.py  test_constants.py  test_exceptions.py
