[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sgd-rest"
dynamic = ["version"]
description = "Saccharomyces Genome Database (SGD) REST API wrapper"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Ira Horecka", email = "ira89@icloud.com" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
dependencies = [
    "requests>=2.28.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sgd"]

[tool.setuptools.dynamic]
version = { attr = "sgd.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]
