[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sgd-rest"
dynamic = ["version"]
description = "Saccharomyces Genome Database (SGD) REST API wrapper"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Ira Horecka", email = "ira89@icloud.com" }]
dependencies = [
    "requests>=2.28.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

[project.license]
text = "MIT"

[project.urls]
"Homepage" = "https://github.com/irahorecka/sgd-rest"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "sgd.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]
